all converters and home page allmost done with bitbucket!

--- a/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/">
-	<head><link href="css/styles.css" type="text/css" rel="stylesheet" /></head>
-	<body>
-		<h1 style="float: left;">Demo</h1>
-		<h2 style="float: right;"><wicket:message key="currentUser">currentUser</wicket:message> :
-			<span wicket:id="username">guest</span>
-		</h2>
-		<br style="clear: both;" />
-		<wicket:child />
-	</body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:wicket="http://wicket.apache.org/">
+<head>
+<link href="css/styles.css" type="text/css" rel="stylesheet" />
+<!-- Bootstrap - Style -->
+<link rel='stylesheet' href='lib/bootstrap/css/bootstrap.min.css' />
+<link rel='stylesheet' href='lib/bootstrap/css/bootstrap-theme.min.css' />
+<!-- JQuery -->
+<script type='text/javascript' src='lib/jquery/js/jquery-2.1.1.min.js'></script>
+<link rel="stylesheet"
+	href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+	<script src="lib/jquery-ui/jquery-ui.min.js"></script>
+	<!-- Bootstrap - Logic -->
+	<script type='text/javascript' src='lib/bootstrap/js/bootstrap.min.js'></script>
+	<!-- Bootstrap Select -->
+	<link rel='stylesheet'
+		href='lib/bootstrap-select/dist/css/bootstrap-select.min.css' />
+	<script type='text/javascript'
+		src='lib/bootstrap-select/dist/js/bootstrap-select.min.js'></script>
+</head>
+<body>
+	<h1 style="float: left;">Demo</h1>
+	<h2 style="float: right;">
+		<wicket:message key="currentUser">currentUser</wicket:message>
+		: <span wicket:id="username">guest</span>
+	</h2>
+	<br style="clear: both;" />
+	<wicket:child />
+</body>
 </html>
