Interesting Comments Panel and starting Movie Page

--- a/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
@@ -27,6 +27,37 @@
 		: <span wicket:id="username">guest</span>
 	</h2>
 	<br style="clear: both;" />
+	
+<!-- 	<ul class="nav navbar-nav navbar-right"> -->
+<!-- 		<c:if test="${not empty user}"> -->
+<!-- 			<p class="navbar-text"> -->
+<!-- 				<c:out -->
+<!-- 					value="Logged in as ${user.firstName.nameString} ${user.lastName.nameString}" /> -->
+<!-- 			</p> -->
+<!-- 		</c:if> -->
+<!-- 		<li class="dropdown"><a href="#" class="dropdown-toggle" -->
+<!-- 			data-toggle="dropdown">Menu<span class="caret"></span></a> -->
+<!-- 			<ul class="dropdown-menu" role="menu"> -->
+<!-- 				<c:choose> -->
+<!-- 					<c:when test="${empty user}"> -->
+<!-- 						<li><a href="app/users/login">Login/Register</a></li> -->
+<!-- 					</c:when> -->
+<!-- 					<c:otherwise> -->
+<!-- 						<c:if test="${user.admin}"> -->
+<!-- 							<li><a href="<c:out value="app/movies/insert"/>">Insert -->
+<!-- 									Movie</a></li> -->
+<!-- 							<li><a href="<c:out value="app/comments/reported"/>">Manage -->
+<!-- 									reported comments</a></li> -->
+<!-- 							<li class="divider"></li> -->
+<!-- 						</c:if> -->
+<!-- 						<li><a href="app/users/profile?user=${user.id}">My -->
+<!-- 								Comments</a></li> -->
+<!-- 						<li class="divider"></li> -->
+<!-- 						<li><a class="btn-link black-link logout">Logout</a></li> -->
+<!-- 					</c:otherwise> -->
+<!-- 				</c:choose> -->
+<!-- 	</nav> -->
+	
 	<wicket:child />
 </body>
 </html>
