--- a/src/main/java/ar/edu/itba/paw/web/homepage/TopPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/TopPanel.html
@@ -12,7 +12,8 @@
 				<tbody>
 					<tr wicket:id="topFive.movie">
 						<td></td>
-						<td wicket:id="title">Title</td>
+						<td><a href="#" wicket:id="details"><wicket:container
+										wicket:id="title" /></a></td> 
 						<td wicket:id="summary">Summary</td>
 					</tr>
 				</tbody>
