--- a/src/main/java/ar/edu/itba/paw/web/homepage/HomePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/HomePage.html
@@ -9,6 +9,7 @@
 				</div>
 				<div class="col-md-8">
 					<wicket:container wicket:id="releasesMovies" />
+					<wicket:container wicket:id="interestingComments" />
 				</div>
 <!-- 				<c:if test="${not empty user}"> -->
 <!-- 				<div class="panel panel-default"> -->
