--- a/src/main/java/ar/edu/itba/paw/web/movie/MoviePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MoviePage.html
@@ -2,7 +2,10 @@
 <body>
 	<wicket:extend>
 		<div class="container">
-			<wicket:container wicket:id="movieInfoPanel" />		
+		
+			<wicket:container wicket:id="movieTitlePanel" />	
+			<wicket:container wicket:id="movieInfoPanel" />	
+<!-- 			<wicket:container wicket:id="movieCommentsPanel" />		 -->
 		</div>
 	</wicket:extend>
 </body>
