--- a/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
@@ -4,60 +4,31 @@
 	xmlns:wicket="http://wicket.apache.org/">
 <head>
 <link href="css/styles.css" type="text/css" rel="stylesheet" />
+<!-- <link href="../css/bootstrap.min.css" rel="stylesheet"> -->
 <!-- Bootstrap - Style -->
 <link rel='stylesheet' href='lib/bootstrap/css/bootstrap.min.css' />
 <link rel='stylesheet' href='lib/bootstrap/css/bootstrap-theme.min.css' />
 <!-- JQuery -->
 <script type='text/javascript' src='lib/jquery/js/jquery-2.1.1.min.js'></script>
-<link rel="stylesheet"
-	href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-	<script src="lib/jquery-ui/jquery-ui.min.js"></script>
-	<!-- Bootstrap - Logic -->
-	<script type='text/javascript' src='lib/bootstrap/js/bootstrap.min.js'></script>
-	<!-- Bootstrap Select -->
-	<link rel='stylesheet'
-		href='lib/bootstrap-select/dist/css/bootstrap-select.min.css' />
-	<script type='text/javascript'
-		src='lib/bootstrap-select/dist/js/bootstrap-select.min.js'></script>
+<link
+	href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css"
+	rel="stylesheet">
+	<link rel="stylesheet"
+		href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+		<script src="lib/jquery-ui/jquery-ui.min.js"></script>
+		<!-- Bootstrap - Logic -->
+		<script type='text/javascript' src='lib/bootstrap/js/bootstrap.min.js'></script>
+		<!-- Bootstrap Select -->
+		<link rel='stylesheet'
+			href='lib/bootstrap-select/dist/css/bootstrap-select.min.css' />
+		<script type='text/javascript'
+			src='lib/bootstrap-select/dist/js/bootstrap-select.min.js'></script>
 </head>
 <body>
-	<h1 style="float: left;">Demo</h1>
-	<h2 style="float: right;">
-		<wicket:message key="currentUser">currentUser</wicket:message>
-		: <span wicket:id="username">guest</span>
-	</h2>
-	<br style="clear: both;" />
-	
-<!-- 	<ul class="nav navbar-nav navbar-right"> -->
-<!-- 		<c:if test="${not empty user}"> -->
-<!-- 			<p class="navbar-text"> -->
-<!-- 				<c:out -->
-<!-- 					value="Logged in as ${user.firstName.nameString} ${user.lastName.nameString}" /> -->
-<!-- 			</p> -->
-<!-- 		</c:if> -->
-<!-- 		<li class="dropdown"><a href="#" class="dropdown-toggle" -->
-<!-- 			data-toggle="dropdown">Menu<span class="caret"></span></a> -->
-<!-- 			<ul class="dropdown-menu" role="menu"> -->
-<!-- 				<c:choose> -->
-<!-- 					<c:when test="${empty user}"> -->
-<!-- 						<li><a href="app/users/login">Login/Register</a></li> -->
-<!-- 					</c:when> -->
-<!-- 					<c:otherwise> -->
-<!-- 						<c:if test="${user.admin}"> -->
-<!-- 							<li><a href="<c:out value="app/movies/insert"/>">Insert -->
-<!-- 									Movie</a></li> -->
-<!-- 							<li><a href="<c:out value="app/comments/reported"/>">Manage -->
-<!-- 									reported comments</a></li> -->
-<!-- 							<li class="divider"></li> -->
-<!-- 						</c:if> -->
-<!-- 						<li><a href="app/users/profile?user=${user.id}">My -->
-<!-- 								Comments</a></li> -->
-<!-- 						<li class="divider"></li> -->
-<!-- 						<li><a class="btn-link black-link logout">Logout</a></li> -->
-<!-- 					</c:otherwise> -->
-<!-- 				</c:choose> -->
-<!-- 	</nav> -->
-	
+	<wicket:container wicket:id="navbar"/>
+	<br />
+	<br />
+	<br />
 	<wicket:child />
 </body>
 </html>
