--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
@@ -6,10 +6,7 @@
 				<h2 class="panel-title">Interesting Users' Comments of the Last
 					Week</h2>
 			</div>
-			<p wicket:enclosure="commentSummary" class="text-center">
-				No comments to show! <br></br> Maybe you want to add more users of
-				your interest? <br></br> Go to Other Users to look around
-			</p>
+			<p wicket:id="noComments" class="text-center"></p>
 			<wicket:container wicket:id="interestingComments">
 				<blockquote>
 					<p wicket:id="commentSummary" />
