--- a/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.html
+++ b/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.html
@@ -42,7 +42,7 @@
 								<input type="password" wicket:id="password" class="form-control"
 									name="password" id="password" placeholder="Enter Password" />
 								<span class="input-group-addon"><span
-									class="glyphicon glyphicon-asterisk" /> <wicket:message
+									class="glyphicon glyphicon-asterisk"></span> <wicket:message
 										key="required">Required</wicket:message></span>
 							</div>
 						</div>
@@ -59,13 +59,13 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="birthDate"><wicket:message
+							<label for="birthday"><wicket:message
 									key="enterBirthday">Enter Birthday</wicket:message></label> <input
-								name="birthDate" class="form-control" wicket:id="birthDate"
+								name="birthday" data-date-format="yy-mm-dd" class="form-control" wicket:id="birthday"
 								id="birthDatepicker" cssClass="birthDatepicker" />
 						</div>
-						<input type="submit" name="submit" id="submit" value="Submit"
-							class="btn btn-primary pull-right">
+						<input type="submit" name="submit" value="Submit"
+										class="btn btn-primary btn-block"/>
 					</form>
 				</div>
 			</div>
