--- a/src/main/java/ar/edu/itba/paw/web/movie/MoviePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MoviePage.html
@@ -5,7 +5,8 @@
 		
 			<wicket:container wicket:id="movieTitlePanel" />	
 			<wicket:container wicket:id="movieInfoPanel" />	
-<!-- 			<wicket:container wicket:id="movieCommentsPanel" />		 -->
+			<wicket:container wicket:id="movieCommentsPanel" />	
+			<wicket:container wicket:id="movieCommentFormPanel"/>	
 		</div>
 	</wicket:extend>
 </body>
