--- a/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/base/BasePage.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:wicket="http://wicket.apache.org/">
 <head>
-<link href="css/styles.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 <!-- <link href="../css/bootstrap.min.css" rel="stylesheet"> -->
 <!-- Bootstrap - Style -->
 <link rel='stylesheet' href='lib/bootstrap/css/bootstrap.min.css' />
