interesting comments in homepage working with proper links, and score comment form code

--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieCommentsPanel.html
@@ -43,6 +43,7 @@
 						<dd>
 							<wicket:container wicket:id="comment.CommentScorePanel" />
 						</dd>
+						<wicket:container wicket:id="scoreCommentForm"/>
 					</div>
 				</dl>
 			</wicket:container>
