--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
@@ -11,13 +11,10 @@
 				<blockquote>
 					<p wicket:id="commentSummary" />
 					<footer>
-						<wicket:message
-								key="username">
-								<span wicket:id="firstName"></span>
-								<span wicket:id="lastName"></span>
-							</wicket:message>
-						commented in <wicket:container
-								wicket:id="title" />
+						<!-- 						<wicket:message key="username" /> -->
+						<a wicket:id="userLink"><span wicket:id="firstName"></span> <span
+							wicket:id="lastName"></span></a> commented in
+						<a wicket:id="movieLink"><wicket:container wicket:id="title" /></a>
 					</footer>
 				</blockquote>
 			</wicket:container>
