--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieInfoPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieInfoPanel.html
@@ -8,9 +8,9 @@
 				</h3>
 			</div>
 			<div class="panel-body">
-				<div class="col-md-3" wicket:enclosure="picture">
-					<img wicket:id="picture" class="profile_image img-circle" />
-				</div>
+<!-- 				<div class="col-md-3" wicket:enclosure="picture"> -->
+<!-- 					<img wicket:id="picture" class="profile_image img-circle" /> -->
+<!-- 				</div> -->
 				<dl class="dl-horizontal">
 					<dt>
 						<wicket:message key="genres"> Genres</wicket:message>
