--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieListPage.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieListPage.html
@@ -12,8 +12,8 @@
 							<th class="col-md-4"><wicket:message key="title">Title</wicket:message></th>
 							<th class="col-md-1"><wicket:message key="detail">Detail</wicket:message></th>
 							<!-- 							<c:if test="${user.admin}"> -->
-<!-- 							<th class="col-md-1"><wicket:container wicket:id="edit">Edit</wicket:container></th> -->
-							<th class="col-md-1"></th>
+							<th class="col-md-1" wicket:enclosure="edit"><wicket:container wicket:id="edit"></wicket:container></th>
+							<!-- 							<th class="col-md-1"></th> -->
 						</tr>
 					</thead>
 					<tbody>
@@ -22,20 +22,15 @@
 							<td class="col-md-2" wicket:id="movie.director.name" />
 							<td class="col-md-4" wicket:id="movie.title" />
 							<td class="col-md-1"><a href="#" wicket:id="movie.link"><span
-								class="glyphicon glyphicon-link"></span></a></td>
-							<!-- 								<c:if test="${user.admin}"> -->
-							<!-- 									<td class="col-md-1"><a href="<c:out -->
-							<!-- 								value=" -->
-							<!-- 										app/movies/edit?movie=${movie.id} " />"><span -->
-							<!-- 										class="glyphicon glyphicon-pencil text-center"></span></a></td> -->
-							<!-- 									<td class="col-md-1"><form role="form" -->
-							<!-- 											action="app/movies/remove" method="post" commandName="remove"> -->
-							<!-- 											<input type="hidden" name="movie" id="movie" -->
-							<!-- 												value="${movie.id}"></input> -->
-							<!-- 											<input type="submit" name="delete" id="delete" value="Delete" -->
-							<!-- 												class="btn btn-primary pull-right"> -->
-							<!-- 										</form></td> -->
-							<!-- 								</c:if> -->
+									class="glyphicon glyphicon-link"></span></a></td>
+							<td wicket:enclosure="editLink" class="col-md-1"><a href="#"
+								wicket:id="editLink"><span
+									class="glyphicon glyphicon-pencil text-center"></span> </a></td>
+							<td wicket:enclosure="deleteMovie" class="col-md-1"><form wicket:id="deleteMovie"
+									role="form" method="post">
+									<input type="submit" name="delete" id="delete" value="Delete"
+										class="btn btn-primary pull-right">
+								</form></td>
 						</tr>
 					</tbody>
 				</table>
