Requerimientos 2 y 3 y cosas de la migración

--- a/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentsPanel.html
@@ -14,7 +14,7 @@
 				<dl class="dl-horizontal">
 					<div class="panel-body">
 						<dt>
-							<wicket:message key="user">User</wicket:message>
+							<wicket:message key="user"/>
 						</dt>
 						<dd>
 							<a href="#" wicket:id="userLink"> <wicket:container
@@ -22,25 +22,25 @@
 							</a>
 						</dd>
 						<dt>
-							<wicket:message key="moviescore">Movie Score</wicket:message>
+							<wicket:message key="moviescore"/>
 						</dt>
 						<dd>
 							<wicket:container wicket:id="movie.scorePanel" />
 						</dd>
 						<dt>
-							<wicket:message key="date">Date</wicket:message>
+							<wicket:message key="date"/>
 						</dt>
 						<dd>
 							<wicket:container wicket:id="comment.creationdate " />
 						</dd>
 						<dt>
-							<wicket:message key="comment">Comment</wicket:message>
+							<wicket:message key="comment"/>
 						</dt>
 						<dd>
 							<wicket:container wicket:id="comment.text" />
 						</dd>
 						<dt>
-							<wicket:message key="commentScore">Comment Score</wicket:message>
+							<wicket:message key="commentScore"/>
 						</dt>
 						<dd>
 							<wicket:container wicket:id="comment.CommentScorePanel" />
