--- a/src/main/java/ar/edu/itba/paw/web/homepage/ReleasesPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/ReleasesPanel.html
@@ -4,11 +4,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading text-center">
 				<h2 class="panel-title">
-					<wicket:message key="releases">Releases</wicket:message>
+					<wicket:message key="releases"/>
 				</h2>
 			</div>
 			<div wicket:id="releases.movie" class="panel panel-default">
-				<div wicket:id="title" class="panel-heading" />
+				<a href="#" wicket:id="movieLink"><div wicket:id="title"
+						class="panel-heading" /></a>
 				<div class="panel-body">
 					<p wicket:id="ShortSummary" />
 				</div>
