--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieTitlePanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieTitlePanel.html
@@ -1,17 +1,8 @@
 <html xmlns:wicket="http://wicket.apache.org/">
 <body>
 	<wicket:panel>
-
-		<div class="page-header">
-			<h1>
-				<wicket:enclosure child="release">
-					<span class="label label-info"><wicket:container
-							wicket:id="release" /></span>
-				</wicket:enclosure>
-				<wicket:container wicket:id="title" />
-
-			</h1>
-		</div>
+		<span wicket:id="loveIcon" />
+		<wicket:container wicket:id="title" />
 	</wicket:panel>
 </body>
 </html>
