removing stuff from before migration and little changes

--- a/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentsPanel.html
@@ -25,25 +25,25 @@
 							<wicket:message key="moviescore"/>
 						</dt>
 						<dd>
-							<wicket:container wicket:id="movie.scorePanel" />
+							<wicket:container wicket:id="movieScorePanel" />
 						</dd>
 						<dt>
 							<wicket:message key="date"/>
 						</dt>
 						<dd>
-							<wicket:container wicket:id="comment.creationdate " />
+							<wicket:container wicket:id="commentCreationdate " />
 						</dd>
 						<dt>
 							<wicket:message key="comment"/>
 						</dt>
 						<dd>
-							<wicket:container wicket:id="comment.text" />
+							<wicket:container wicket:id="commentText" />
 						</dd>
 						<dt>
 							<wicket:message key="commentScore"/>
 						</dt>
 						<dd>
-							<wicket:container wicket:id="comment.CommentScorePanel" />
+							<wicket:container wicket:id="commentCommentScorePanel" />
 						</dd>
 						<wicket:container wicket:id="scoreCommentForm" />
 						<br />
