--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieListPage.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieListPage.html
@@ -7,21 +7,20 @@
 				<table class="table table-striped">
 					<thead>
 						<tr>
-							<th class="col-md-2"><wicket:message key="releaseDate">Release Date</wicket:message></th>
-							<th class="col-md-2"><wicket:message key="director">Director</wicket:message></th>
-							<th class="col-md-4"><wicket:message key="title">Title</wicket:message></th>
-							<th class="col-md-1"><wicket:message key="detail">Detail</wicket:message></th>
-							<!-- 							<c:if test="${user.admin}"> -->
+							<th class="col-md-2"><wicket:message key="releaseDate"/></th>
+							<th class="col-md-2"><wicket:message key="director"/></th>
+							<th class="col-md-4"><wicket:message key="title"/></th>
+							<th class="col-md-1"><wicket:message key="detail"/></th>
 							<th class="col-md-1" wicket:enclosure="edit"><wicket:container wicket:id="edit"></wicket:container></th>
 							<!-- 							<th class="col-md-1"></th> -->
 						</tr>
 					</thead>
 					<tbody>
 						<tr wicket:id="movies">
-							<td class="col-md-2" wicket:id="movie.releaseDate" />
-							<td class="col-md-2" wicket:id="movie.director.name" />
-							<td class="col-md-4" wicket:id="movie.title" />
-							<td class="col-md-1"><a href="#" wicket:id="movie.link"><span
+							<td class="col-md-2" wicket:id="movieReleaseDate" />
+							<td class="col-md-2" wicket:id="movieDirector" />
+							<td class="col-md-4" wicket:id="movieTitle" />
+							<td class="col-md-1"><a href="#" wicket:id="movieLink"><span
 									class="glyphicon glyphicon-link"></span></a></td>
 							<td wicket:enclosure="editLink" class="col-md-1"><a href="#"
 								wicket:id="editLink"><span
