--- a/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.html
+++ b/src/main/java/ar/edu/itba/paw/web/user/RegisterPage.html
@@ -64,6 +64,11 @@
 								name="birthday" data-date-format="yy-mm-dd" class="form-control" wicket:id="birthday"
 								id="birthDatepicker" cssClass="birthDatepicker" />
 						</div>
+						<div class="form-group">
+							<label for="captcha"><wicket:message
+									key="enterCaptcha"/></label> 
+									<wicket:container wicket:id="captchaPanel"/>
+						</div>
 						<input type="submit" name="submit" value="Submit"
 										class="btn btn-primary btn-block"/>
 					</form>
