--- a/src/main/java/ar/edu/itba/paw/web/movie/MovieInfoPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/MovieInfoPanel.html
@@ -59,7 +59,7 @@
 					</dt>
 					<dd>
 						<p>
-							<wicket:container wicket:id="movie.summary" />
+							<wicket:container wicket:id="movieSummary" />
 						</p>
 					</dd>
 					<dt>
@@ -68,6 +68,14 @@
 					<dd>
 						<p>
 							<wicket:container wicket:id="movieVisits" />
+						</p>
+					</dd>
+					<dt>
+						<wicket:message key="stock"/>
+					</dt>
+					<dd>
+						<p>
+							<wicket:container wicket:id="movieStock" />
 						</p>
 					</dd>
 				</dl>
