--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
@@ -3,16 +3,22 @@
 	<wicket:panel>
 		<div class="panel panel-default">
 			<div class="panel-heading text-center">
-				<h2 class="panel-title"><wicket:message key="interestingUsers"/></h2>
+				<h2 class="panel-title">
+					<wicket:message key="interestingUsers" />
+				</h2>
 			</div>
-			<p wicket:id="noComments" class="text-center"></p>
+			<div wicket:enclosure="noComments">
+				<br />
+				<p wicket:id="noComments" class="text-center"></p>
+				<br />
+			</div>
 			<wicket:container wicket:id="interestingComments">
 				<blockquote>
 					<p wicket:id="commentSummary" />
 					<footer>
-						<!-- 						<wicket:message key="username" /> -->
 						<a wicket:id="userLink"><span wicket:id="firstName"></span> <span
-							wicket:id="lastName"></span></a> <wicket:message key="commentIn"/>
+							wicket:id="lastName"></span></a>
+						<wicket:message key="commentIn" />
 						<a wicket:id="movieLink"><wicket:container wicket:id="title" /></a>
 					</footer>
 				</blockquote>
