--- a/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.html
@@ -39,15 +39,15 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="genres"><wicket:message key="enterGenre" /><span
-									class="glyphicon glyphicon-asterisk"></span> (<wicket:message
-										key="required" />)</label>
+							<label for="genres"><wicket:message key="enterGenre" /> <span
+								class="glyphicon glyphicon-asterisk"></span> (<wicket:message
+									key="chooseAtLeastOne" />)</label>
 							<div class="input-group">
 								<span wicket:id="genres"></span>
 								<!-- 								 <select wicket:id="genres"></select> -->
 								<!-- 								<input wicket:id="genres" type="text" class="form-control" -->
 								<!-- 									id="genres" placeholder="Action, Comedy, ..." />  -->
-								
+
 							</div>
 							<!-- 							<wicket:message key="genresHelp" /> -->
 							<!-- 							<wicket:container wicket:id="genresAll" /> -->
@@ -65,7 +65,10 @@
 							<label for="releaseDate"><wicket:message
 									key="enterRelease" /></label> <input wicket:id="releaseDate"
 								type="text" name="releaseDate" path="releaseDate"
-								id="releaseDatepicker" cssClass="releaseDatepicker" />
+								id="releaseDatepicker" cssClass="releaseDatepicker" /><span
+								class="input-group-addon"><span
+								class="glyphicon glyphicon-asterisk"></span> <wicket:message
+									key="required" /></span>
 						</div>
 						<div class="form-group" wicket:enclosure="picture">
 							<label for="picture">Actual Picture</label><br /> <img
